UI: Fix alignment of modifiers in tooltip
fix: Path to thumbnails

--- a/src/style.css
+++ b/src/style.css
@@ -2086,3 +2086,8 @@ body.dragging-card .floating-card-holder .empty-slot {
   text-align: center;
   margin-top: 8px;
 }
+
+.modifiers {
+  margin-left: 4px;
+  margin-top: 2px;
+}
